# lovable-ai-platform_version_0.0.1

./: .gitignore  .replit  DS_Store  README.md  README_DEPLOY.md  about.html  app.json  auth.html  claude-colors.css  dashboard.css  dashboard.html  dashboard.js  docker-compose.yml  examples.html  frontend-enhanced.html  index.html  init_database.py  nocode-dashboard.html  pricing.html  pyproject.toml  render.yaml  requirements.txt  script.js  serve_frontend.py  start_project.py  styles.css  support.html  test_advanced_processor.py  test_ai_mentor.py  test_chat_api.py  test_chat_simple.py  test_enhanced_chat.py  test_history_page.html  test_processor_direct.py  test_simple.py  users.db  vibecode_test.py
attached_assets/: Pasted--Vibecode-AI-idle-rpg--1755110346680_1755110346682.txt
backend/: .env  .env.example  advanced_ai.py  advanced_ai_processor.py  advanced_generator.py  advanced_templates.py  ai_chat_system.py  ai_config.py  ai_orchestrator.py  api_extensions.py  app.py  audio_video_handler.py  collaborative_features.py  comprehensive_test.py  cookies.txt  debug_history.html  deployment_manager.py  enhanced_ai_services.py  env_example.txt  fullstack_generator.py  genius_conversation.py  github_integration.py  intelligent_chat.py  logging_system.py  mega_project_generator.py  mentor_psychology.py  mobile_generators.py  mobile_responsive.py  performance_monitor.py  premium_graphics_libraries.py  project_genius.py  project_hosting_system.py  requirements.txt  russian_ai.py  smart_ai_generator.py  smart_api_routes.py  smart_nlp.py  supabase_integration.py  (+10 more)
(+49 files in other folders)
